# video-to-text-api

./: .gitignore  README.md  pyproject.toml
src/api/: __init__.py  util.py
src/api/v1/: __init__.py  filters.py  serializers.py  transcript.py  transcript_data.py
src/backend/: authentication.py  custom_authentication.py  settings.py  urls.py
src/transcriber/: apps.py  tasks.py  util.py
src/transcriber/llms/: assembly_ai.py  base.py  chairman.py  open_ai.py  providers.py
src/transcriber/migrations/: 0001_initial.py  0002_transcriptiondata_segments.py
src/transcriber/models/: __init__.py  transcription.py  transcription_data.py
tests/: conftest.py  test_authentication.py  test_transcription.py
